--- a/TopSkillsWeb/Resources/Resource.resx
+++ b/TopSkillsWeb/Resources/Resource.resx
@@ -117,16 +117,73 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AccessDenideMessage" xml:space="preserve">
+    <value>Обратитесь к администратору для доступа в данный модуль приложения.</value>
+  </data>
   <data name="Account" xml:space="preserve">
     <value>Учетная запись</value>
+  </data>
+  <data name="AccountRegistration" xml:space="preserve">
+    <value>Регистрация учетной записи</value>
+  </data>
+  <data name="Administration" xml:space="preserve">
+    <value>Администрирование</value>
+  </data>
+  <data name="AlreadyHaveAnAccount" xml:space="preserve">
+    <value>Уже есть учетная запись?</value>
+  </data>
+  <data name="ConfrimPassword" xml:space="preserve">
+    <value>Подтверждение пароля</value>
+  </data>
+  <data name="DontHaveAccount" xml:space="preserve">
+    <value>Нет акаунта?</value>
+  </data>
+  <data name="Email" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="ForgetPassword" xml:space="preserve">
+    <value>Забыли пароль?</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Главная</value>
   </data>
+  <data name="Login" xml:space="preserve">
+    <value>Вход</value>
+  </data>
+  <data name="LoginInAccount" xml:space="preserve">
+    <value>Вход в учетную запись</value>
+  </data>
+  <data name="NameApp" xml:space="preserve">
+    <value>TopSkillWeb</value>
+  </data>
+  <data name="OopsAccessDenide" xml:space="preserve">
+    <value>Заблудились? У вас нет доступа!</value>
+  </data>
+  <data name="Password" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="Register" xml:space="preserve">
+    <value>Регистрация</value>
+  </data>
+  <data name="RememberMe" xml:space="preserve">
+    <value>Запомнить меня?</value>
+  </data>
   <data name="Settings" xml:space="preserve">
     <value>Настройки</value>
   </data>
+  <data name="ShowPassword" xml:space="preserve">
+    <value>Показать пароль</value>
+  </data>
+  <data name="SignUp" xml:space="preserve">
+    <value>Зарегистрироваться</value>
+  </data>
+  <data name="TakeMeHome" xml:space="preserve">
+    <value>Отправьте меня домой</value>
+  </data>
   <data name="ToHome" xml:space="preserve">
     <value>На главную</value>
+  </data>
+  <data name="UserName" xml:space="preserve">
+    <value>Имя пользователя</value>
   </data>
 </root>
