Добавлены классы описывающие таблицы Добавлена страница Группы

--- a/TopSkillsWeb/Resources/Resource.resx
+++ b/TopSkillsWeb/Resources/Resource.resx
@@ -135,14 +135,29 @@
   <data name="ConfrimPassword" xml:space="preserve">
     <value>Подтверждение пароля</value>
   </data>
+  <data name="CourseName" xml:space="preserve">
+    <value>Название курса</value>
+  </data>
   <data name="DontHaveAccount" xml:space="preserve">
     <value>Нет акаунта?</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Редактировать</value>
   </data>
   <data name="Email" xml:space="preserve">
     <value>Email</value>
   </data>
+  <data name="EmptyResult" xml:space="preserve">
+    <value>Нет результатов</value>
+  </data>
   <data name="ForgetPassword" xml:space="preserve">
     <value>Забыли пароль?</value>
+  </data>
+  <data name="GroupName" xml:space="preserve">
+    <value>Название группы</value>
+  </data>
+  <data name="GroupsStudents" xml:space="preserve">
+    <value>Группы студентов</value>
   </data>
   <data name="Home" xml:space="preserve">
     <value>Главная</value>
@@ -162,6 +177,9 @@
   <data name="Password" xml:space="preserve">
     <value>Пароль</value>
   </data>
+  <data name="References" xml:space="preserve">
+    <value>Справочники</value>
+  </data>
   <data name="Register" xml:space="preserve">
     <value>Регистрация</value>
   </data>
@@ -179,6 +197,9 @@
   </data>
   <data name="TakeMeHome" xml:space="preserve">
     <value>Отправьте меня домой</value>
+  </data>
+  <data name="TeacherName" xml:space="preserve">
+    <value>Преподаватель</value>
   </data>
   <data name="ToHome" xml:space="preserve">
     <value>На главную</value>
