--- a/TopSkillsWeb/Resources/Resource.resx
+++ b/TopSkillsWeb/Resources/Resource.resx
@@ -135,6 +135,15 @@
   <data name="AlreadyHaveAnAccount" xml:space="preserve">
     <value>Уже есть учетная запись?</value>
   </data>
+  <data name="April" xml:space="preserve">
+    <value>Апрель</value>
+  </data>
+  <data name="Attendance" xml:space="preserve">
+    <value>Посещения</value>
+  </data>
+  <data name="August" xml:space="preserve">
+    <value>Август</value>
+  </data>
   <data name="Cancel" xml:space="preserve">
     <value>Отменить</value>
   </data>
@@ -168,6 +177,9 @@
   <data name="CreateTeacher" xml:space="preserve">
     <value>Добавить учителя</value>
   </data>
+  <data name="December" xml:space="preserve">
+    <value>Декабрь</value>
+  </data>
   <data name="DontHaveAccount" xml:space="preserve">
     <value>Нет акаунта?</value>
   </data>
@@ -192,11 +204,23 @@
   <data name="EmptyResult" xml:space="preserve">
     <value>Нет результатов</value>
   </data>
+  <data name="EnableDarkMode" xml:space="preserve">
+    <value>Включить темную тему</value>
+  </data>
+  <data name="EnableLightMode" xml:space="preserve">
+    <value>Включить светлую тему</value>
+  </data>
+  <data name="February" xml:space="preserve">
+    <value>Февраль</value>
+  </data>
   <data name="FirstName" xml:space="preserve">
     <value>Имя</value>
   </data>
   <data name="ForgetPassword" xml:space="preserve">
     <value>Забыли пароль?</value>
+  </data>
+  <data name="Fri" xml:space="preserve">
+    <value>Пт</value>
   </data>
   <data name="GroupAddDone" xml:space="preserve">
     <value>Группа успешно создана</value>
@@ -210,6 +234,15 @@
   <data name="Home" xml:space="preserve">
     <value>Главная</value>
   </data>
+  <data name="January" xml:space="preserve">
+    <value>Январь</value>
+  </data>
+  <data name="July" xml:space="preserve">
+    <value>Июль</value>
+  </data>
+  <data name="Juny" xml:space="preserve">
+    <value>Июнь</value>
+  </data>
   <data name="LastName" xml:space="preserve">
     <value>Фамилия</value>
   </data>
@@ -222,17 +255,38 @@
   <data name="LoginInAccount" xml:space="preserve">
     <value>Вход в учетную запись</value>
   </data>
+  <data name="March" xml:space="preserve">
+    <value>Март</value>
+  </data>
+  <data name="May" xml:space="preserve">
+    <value>Май</value>
+  </data>
   <data name="MiddleName" xml:space="preserve">
     <value>Отчество</value>
   </data>
+  <data name="Mon" xml:space="preserve">
+    <value>Пн</value>
+  </data>
   <data name="NameApp" xml:space="preserve">
     <value>TopSkillWeb</value>
+  </data>
+  <data name="Next" xml:space="preserve">
+    <value>Следущий</value>
+  </data>
+  <data name="November" xml:space="preserve">
+    <value>Ноябрь</value>
+  </data>
+  <data name="October" xml:space="preserve">
+    <value>Октябрь</value>
   </data>
   <data name="OopsAccessDenide" xml:space="preserve">
     <value>Заблудились? У вас нет доступа!</value>
   </data>
   <data name="Password" xml:space="preserve">
     <value>Пароль</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Предыдущий</value>
   </data>
   <data name="References" xml:space="preserve">
     <value>Справочники</value>
@@ -243,8 +297,14 @@
   <data name="RememberMe" xml:space="preserve">
     <value>Запомнить меня?</value>
   </data>
+  <data name="Sat" xml:space="preserve">
+    <value>Сб</value>
+  </data>
   <data name="Save" xml:space="preserve">
     <value>Сохранить</value>
+  </data>
+  <data name="September" xml:space="preserve">
+    <value>Сентябрь</value>
   </data>
   <data name="Settings" xml:space="preserve">
     <value>Настройки</value>
@@ -264,6 +324,9 @@
   <data name="Students" xml:space="preserve">
     <value>Студенты</value>
   </data>
+  <data name="Sun" xml:space="preserve">
+    <value>Вс</value>
+  </data>
   <data name="TakeMeHome" xml:space="preserve">
     <value>Отправьте меня домой</value>
   </data>
@@ -276,13 +339,25 @@
   <data name="Teachers" xml:space="preserve">
     <value>Учителя</value>
   </data>
+  <data name="Thurs" xml:space="preserve">
+    <value>Чт</value>
+  </data>
+  <data name="Today" xml:space="preserve">
+    <value>Сегодня</value>
+  </data>
   <data name="ToHome" xml:space="preserve">
     <value>На главную</value>
+  </data>
+  <data name="Tues" xml:space="preserve">
+    <value>Вт</value>
   </data>
   <data name="UserName" xml:space="preserve">
     <value>Имя пользователя</value>
   </data>
   <data name="VisitsLeft" xml:space="preserve">
     <value>Осталось занятий</value>
+  </data>
+  <data name="Wed" xml:space="preserve">
+    <value>Ср</value>
   </data>
 </root>
