--- a/TopSkillsWeb/Resources/Resource.resx
+++ b/TopSkillsWeb/Resources/Resource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Abonement" xml:space="preserve">
+    <value>Абонемент</value>
+  </data>
   <data name="AccessDenideMessage" xml:space="preserve">
     <value>Обратитесь к администратору для доступа в данный модуль приложения.</value>
   </data>
@@ -188,6 +191,9 @@
   </data>
   <data name="CreateTeacher" xml:space="preserve">
     <value>Добавить учителя</value>
+  </data>
+  <data name="DateAbonementStart" xml:space="preserve">
+    <value>Дата абонемента</value>
   </data>
   <data name="December" xml:space="preserve">
     <value>Декабрь</value>
@@ -273,6 +279,9 @@
   <data name="Lng" xml:space="preserve">
     <value>ru</value>
   </data>
+  <data name="LoadingCalendar" xml:space="preserve">
+    <value>Загрузка календаря</value>
+  </data>
   <data name="Login" xml:space="preserve">
     <value>Вход</value>
   </data>
@@ -305,6 +314,12 @@
   </data>
   <data name="OopsAccessDenide" xml:space="preserve">
     <value>Заблудились? У вас нет доступа!</value>
+  </data>
+  <data name="ParentFIO" xml:space="preserve">
+    <value>ФИО Родителя</value>
+  </data>
+  <data name="ParentNumberPhone" xml:space="preserve">
+    <value>Телефон Родителя</value>
   </data>
   <data name="Password" xml:space="preserve">
     <value>Пароль</value>
@@ -386,6 +401,9 @@
   </data>
   <data name="UserName" xml:space="preserve">
     <value>Имя пользователя</value>
+  </data>
+  <data name="Visits" xml:space="preserve">
+    <value>Посещения</value>
   </data>
   <data name="VisitsLeft" xml:space="preserve">
     <value>Осталось занятий</value>
