--- a/TopSkillsWeb/Resources/Resource.resx
+++ b/TopSkillsWeb/Resources/Resource.resx
@@ -267,6 +267,9 @@
   <data name="Edit" xml:space="preserve">
     <value>Редактировать</value>
   </data>
+  <data name="EditAttendance" xml:space="preserve">
+    <value>Редактировать посещаемость</value>
+  </data>
   <data name="EditCourse" xml:space="preserve">
     <value>Изменить курс</value>
   </data>
